// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontMatter: (globals) should set custom indexLabel 1`] = `
"---
id: \\"modules\\"
title: \\"test-project-name\\"
sidebar_label: \\"Custom index label\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (globals) should set default globals page 1`] = `
"---
id: \\"modules\\"
title: \\"test-project-name\\"
sidebar_label: \\"Table of contents\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (globals) should set globals page when readme=none 1`] = `
"---
id: \\"index\\"
title: \\"test-project-name\\"
slug: \\"/api\\"
sidebar_label: \\"Table of contents\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (no sidebar) should return front matter without sidebar 1`] = `
"---
id: \\"modules\\"
title: \\"test-project-name\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (readme) should set custom readmeLabel and readmeTitle 1`] = `
"---
id: \\"index\\"
title: \\"Custom readme title\\"
slug: \\"/api\\"
sidebar_label: \\"Custom readme label\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (readme) should set default index page 1`] = `
"---
id: \\"index\\"
title: \\"test-project-name\\"
slug: \\"/api\\"
sidebar_label: \\"Readme\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (readme) should set the same custom readmeLabel and readmeTitle 1`] = `
"---
id: \\"index\\"
title: \\"Custom readme title\\"
slug: \\"/api\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (reflection names) should return front matter with full names 1`] = `
"---
id: \\"url\\"
title: \\"Class: FrontMatterClass\\"
sidebar_label: \\"frontmatter.FrontMatterClass\\"
hide_title: true
---

CONTENTS"
`;

exports[`FrontMatter: (reflection names) should return reflection labels with short names 1`] = `
"---
id: \\"url\\"
title: \\"Class: FrontMatterClass\\"
sidebar_label: \\"FrontMatterClass\\"
hide_title: true
---

CONTENTS"
`;
